--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,3 +1,4 @@
+ /* Home */
 .home {
     width: 100vw;
     height: 100vh;
@@ -10,6 +11,9 @@
     z-index: -1;
     position: absolute;
 }
+
+
+/* Nav Bar */
 .navhome{
     z-index: 10;
     position: relative;
@@ -29,7 +33,7 @@
     gap: 32px;
    
 }
-.navhome .logo {
+.navhome .logo a{
     display: flex;
     align-items: center;
 }
@@ -39,3 +43,76 @@
     max-width: 22px;
     height: 22px;
 }
+
+
+/* Seção do meio da home */
+.middle{
+    width: 100%;
+    max-width: 120rem;
+    display: flex;
+    justify-content: space-between;
+    top: 23.75rem;
+    position: relative
+}
+.middle .left_part{
+    width: 100%;
+    max-width: 7.375rem;
+    height: 4.5625rem;
+    color: var( --color-gray-500);
+}
+.top_part p{
+    margin-bottom: 28px;
+}
+
+.bottom_part p{
+    color: var(--color-white);
+    font-size: 16px;
+    line-height: 16px;
+    margin-bottom: 12px;
+}
+.middle .right_part{
+    width: 100%;
+    max-width: 193px;
+    height: 73px;
+    color: var(--color-gray-500);
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+
+.middle .right_part a{
+    color: var(--color-gray-900);
+    margin-left: 5px;
+}
+.right_part .time_text{
+    margin-bottom: 28px;
+
+}
+.right_part .time{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+
+/* Texto revelatio */
+.img_revelatio{
+    width: 100%;
+    max-width: 120rem;
+    height: 190px;
+    position: relative;
+    top:612px;
+    display: flex;
+    justify-content: center;
+    object-position: 50% 50%;
+    
+}
+
+.img_revelatio img{
+   width: 100%;
+   height: 100%;
+   object-fit: contain;
+}
+
+
