--- a/src/componentes/Solucoes/solucoes.css
+++ b/src/componentes/Solucoes/solucoes.css
@@ -81,6 +81,7 @@
     max-width: 650px;
     display: flex;
     justify-content: space-between;
+    border-top: 1px var(--color-gray-900) solid;
 }
 .texts_studio h2{
     font-size: 16px;
