--- a/src/componentes/Ideias/ideias.css
+++ b/src/componentes/Ideias/ideias.css
@@ -3,3 +3,29 @@
     color: var(--color-white);
     padding-top: 14.5rem;
 }
+.sections{
+    width: 100%;
+    height: 132px;
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    padding-top: 32px;
+    border-top: 1px var(--color-gray-100) solid;
+}
+.options span {
+    color: var(--color-gray-200);
+    margin-right: 2px;
+}
+.sections p{
+    padding-bottom: 8px;
+}
+.sections p:last-child{
+    margin-bottom: 0px;
+}
+.sections_gray{
+    color: var(--color-gray-200);
+}
+.sections_last{
+    border-bottom: 1px var(--color-gray-100) solid;
+
+}
