finalizado hover part ideias

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
   --color-gray-600: #666666;
   --color-gray-200: #333333;
   --color-gray-100: #191919;
+  --color-gray-700: #B3B3B3;
   --color-white: #FFFFFF;
   --color-black: #000000
 }
