--- a/src/componentes/Ideias/ideias.css
+++ b/src/componentes/Ideias/ideias.css
@@ -1,9 +1,12 @@
+/* div principal */
 .container_ideias{
     background-color: var(--color-black);
     color: var(--color-white);
     padding-top: 14.5rem;
 }
-.sections{
+
+/* cada divisao das secoes */
+.sections {
     width: 100%;
     height: 132px;
     display: flex;
@@ -11,25 +14,47 @@
     align-items: start;
     padding-top: 32px;
     border-top: 1px var(--color-gray-100) solid;
+    transition: color 0.5s;
+    color: var(--color-gray-200);
 }
+
+.sections div {
+    transition: color 0.5s ease;
+    color: var(--color-gray-200);
+}
+
+/* Hover na seção: muda a cor geral para branco */
+.sections:hover {
+    color: var(--color-white); /* Muda a cor geral */
+}
+
+.sections:hover div {
+    color: var(--color-white); /* Garante que todos os filhos fiquem brancos no hover */
+}
+
+.sections:hover div:nth-child(n+3) {
+    color: var(--color-gray-700); 
+}
+
+/* cada div dentro de sections */
 .options{
     width: 100%;
     max-width: 28.75rem;
 }
+
 .options span {
-    color: var(--color-gray-200);
     margin-right: 2px;
 }
+
 .sections p{
     padding-bottom: 8px;
 }
 .sections p:last-child{
     margin-bottom: 0px;
 }
-.sections_gray{
-    color: var(--color-gray-200);
-}
+
 .sections_last{
     border-bottom: 1px var(--color-gray-100) solid;
 
 }
+
