--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@
   --color-gray-100: #191919;
   --color-gray-700: #B3B3B3;
   --color-gray-800: #CCCCCC;
+  --color-gray-400: #999999;
   --color-white: #FFFFFF;
   --color-black: #000000
 }
