--- a/src/componentes/Solucoes/solucoes.css
+++ b/src/componentes/Solucoes/solucoes.css
@@ -1,16 +1,18 @@
 /* div principal  */
-.herofirst{
+.herofirst {
     margin-top: 138px;
     display: flex;
     justify-content: space-between;
     align-items: end;
 }
-.herofirst h1{
+
+.herofirst h1 {
     font-size: 88px;
     font-weight: 450;
 }
+
 /* texto da esquerda */
-.left_text{
+.left_text {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -20,27 +22,28 @@
 
 /* parte da direita */
 
-.right_part_solucoes{
+.right_part_solucoes {
     width: 100%;
     max-width: 592px;
     height: 73px;
-    color: var(--color-gray-900); 
+    color: var(--color-gray-900);
 }
 
 
-.right_part_solucoes a{
+.right_part_solucoes a {
     color: var(--color-gray-500);
     margin-left: 5px;
 }
-.right_part_solucoes .time{
+
+.right_part_solucoes .time {
     display: flex;
     flex-direction: column;
     align-items: end;
-    
+
 }
 
 /* borda */
-.border{
+.border {
     width: 100%;
     max-width: 542px;
     padding-top: 42px;
@@ -49,40 +52,43 @@
 }
 
 /* segunda parte */
-.herosecond{
+.herosecond {
     margin: 72px 0px;
     display: flex;
     flex-direction: column;
     align-items: end;
 }
-.herosecond h1{
+
+.herosecond h1 {
     font-size: 88px;
     font-weight: 450;
 }
 
 /* parte final  */
-.herofinal{
+.herofinal {
     width: 100%;
     max-width: 120rem;
     height: 400px;
     display: flex;
     justify-content: space-between;
 }
-.herofinal .border{
+
+.herofinal .border {
     padding-top: 0px;
     width: 100%;
     max-width: 650px;
 }
 
 
-.texts_studio{
+.texts_studio {
     width: 100%;
     max-width: 650px;
     display: flex;
     justify-content: space-between;
     border-top: 1px var(--color-gray-900) solid;
 }
-.texts_studio h2{
+
+.texts_studio h2 {
     font-size: 16px;
     font-weight: 500;
     color: var(--color-gray-600);
@@ -90,12 +96,13 @@
     padding-bottom: 30px;
 }
 
-.texts_studio p{
+.texts_studio p {
     color: var(--color-gray-600);
     font-weight: 400;
     font-size: 16px;
 }
-.texts_studio a{
+
+.texts_studio a {
     margin-top: 68px;
     color: var(--color-gray-200);
     font-weight: 400;
@@ -104,30 +111,40 @@
     padding-bottom: 5px;
     margin-left: 5px;
 
-    
+
 }
 
-.seecases{
+.seecases {
     padding-top: 66px;
 }
 
-.studio_left{
+.studio_left {
     padding-top: 85px;
 }
-.studio_left .p1{
+
+.studio_left .p1 {
     color: var(--color-gray-100);
-    
+
 }
 
-.studio_img{
+.studio_img {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: end;
     justify-content: end;
+    position: relative;
 }
-.studio_img img{
-    width: 330px;
-    height: 258px;
 
+.studio_img img {
+    width: 20.625rem;
+    height: 16.125rem;
+
+}
+.blour{
+    position: absolute; /* Imagem 1 fica sobreposta */
+    bottom: 0;
+    right: 0;
+    z-index: 1; /* Controla a profundidade da sobreposição */
+    opacity: 1;
 }
