--- a/src/pages/Home/componentesHome/AboutHome/abouthome.css
+++ b/src/pages/Home/componentesHome/AboutHome/abouthome.css
@@ -1,7 +1,8 @@
 .container_about{
     background-color: var(--color-black);
     color: var(--color-white);
-    padding-top: 76px;
+    padding-top: 4.75rem;
+    margin-top: 282px;
 }
 
 .container_about h1{
