--- a/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
+++ b/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
@@ -37,11 +37,22 @@
     height: 16.25rem;
 
 }
+.project{
+    width: 100%;
+    max-width: 20.6875rem;
+    color: var(--color-gray-700);
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+}
+.project-name :nth-child(1){
+    color: var(--color-gray-100);
+}
 
 .overlay-blur{
     position: absolute;
     width: 100%;
-    height: 263px;
+    height: 16.4375rem;
     backdrop-filter: blur(10px);
     z-index: 10;
 }
