--- a/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
+++ b/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
@@ -70,12 +70,12 @@
 .case-1:nth-child(5)
  {
     margin-top: 263px;
-    padding-left: 10%;
+    /* padding-left: 10%; */
 }
 
-.case-1:nth-child(2),
+/* .case-1:nth-child(2),
 .case-1:nth-child(4),
 .case-1:nth-child(6)
 {
     padding-left: 75%;
-}
+} */
