--- a/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
+++ b/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
@@ -6,7 +6,6 @@
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
     display: flex;
     flex-direction: column;
-    /* border: 2px red solid; */
 }
 
 .middle-text {
@@ -15,6 +14,12 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: -1;
+}
+.progress-bar{
+    position: absolute;
+    z-index: 11;
+    width: 100%;
+    height: 200px;
 }
 
 .cases-scroll h1 {
@@ -54,7 +59,7 @@
     width: 100%;
     height: 16.4375rem;
     backdrop-filter: blur(10px);
-    z-index: 10;
+    z-index: 2;
 }
 .overlay-blur.bottom{
     bottom: 0px;
