--- a/src/pages/About/componentesAbout/Fundadores/fundadores.css
+++ b/src/pages/About/componentesAbout/Fundadores/fundadores.css
@@ -1,29 +1,37 @@
 .container-fund{
     margin-top: 13.3125rem;
     overflow: hidden;
+    position: relative;
 }
-.socio-name{
+.fund-name{
+    position: absolute;
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    max-width: 1750px;
+    height: 150px;
+    transition: opacity 0.5s ease;
 }
-.socio-name h2{
+
+.fund-name h2{
    color: var(--color-black);
    font-size: 48px;
    font-weight: 450;
    line-height: 120%;
 }
 
-.socio-name p{
+.fund-name p{
     color: var(--color-gray-500);
     font-weight: 500;
     font-size: 16px;
     line-height: 130%;
 
 }
-.socio-name p:first-child{
+.fund-name p:first-child{
     padding-bottom: 1.25rem;
 }
-.socios-img{
+.fund-img{
+    padding-top: 150px;
     width: 100%;
     max-width: 1500px;
     display: flex;
@@ -34,7 +42,7 @@
     
 }
 
-.socios-img img{
+.fund-img img{
     width: 329px;
     height: 458px;
 
