--- a/src/pages/About/componentesAbout/Fundadores/fundadores.css
+++ b/src/pages/About/componentesAbout/Fundadores/fundadores.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    max-width: 1750px;
+    max-width: 109.375rem;
     height: 150px;
     transition: opacity 0.5s ease;
 }
@@ -33,13 +33,32 @@
 .fund-img{
     padding-top: 150px;
     width: 100%;
-    max-width: 1500px;
+    max-width: 93.75rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     align-items: center;
     margin: 0 auto;
     
+}
+
+.founder{
+    margin-top:10px ;
+    display: flex;
+    justify-content: space-between;
+    font-size: 12px;
+}
+
+.founder p{
+    color: var(--color-gray-200);
+    font-weight: 400;
+    line-height: 120%;
+}
+.founder span{
+    color: var(--color-gray-400);
+}
+.description{
+    text-align: end;
 }
 
 .fund-img img{
