--- a/src/pages/About/componentesAbout/Fundadores/fundadores.css
+++ b/src/pages/About/componentesAbout/Fundadores/fundadores.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    max-width: 109.375rem;
+    max-width: 91.15vw;
     height: 150px;
     transition: opacity 0.5s ease;
 }
