--- a/src/pages/Home/componentesHome/BottomHome/bottomhome.css
+++ b/src/pages/Home/componentesHome/BottomHome/bottomhome.css
@@ -55,6 +55,7 @@
     margin-bottom: 0.625rem;
     transition: color 0.5s ease, border 0.5s ease;
     border-bottom: 1px black solid;
+    max-width: max-content;
 }
 
 .links p:hover{
