--- a/src/pages/About/componentesAbout/Fundadores/fundadores.css
+++ b/src/pages/About/componentesAbout/Fundadores/fundadores.css
@@ -31,7 +31,8 @@
     padding-bottom: 1.25rem;
 }
 .fund-img{
-    padding-top: 150px;
+    padding-top: 9.375rem;
+    padding-bottom: 1.5625rem;
     width: 100%;
     max-width: 93.75rem;
     display: flex;
