arrumando css para cor do pais

--- a/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
+++ b/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
@@ -81,6 +81,13 @@
     color: var(--color-white);
 
 }
+.middle-roulette .country.active p{
+    color: var(--color-white);
+
+  
+
+}
+
 
 
 .middle-roulette .country p{
