--- a/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
+++ b/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
@@ -52,10 +52,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
     overflow: hidden;
-    padding-top: 850px;
     position: relative;
    
 }
@@ -66,6 +65,7 @@
  
 
 }
+
 
 .middle-roulette .country h1{
     font-family: 'NeueHaasDisplayRoman';
