--- a/src/index.css
+++ b/src/index.css
@@ -32,9 +32,14 @@ img {
   height: 100%;
   object-fit: cover;
 }
-p, h1, h2, a, span{
-  font-family: "NeueHaasLight";
+p, a, span{
+  font-family: "neue-haas-grotesk-text";
 }
+h1, h2{
+  font-family: "neue-haas-grotesk-display"
+
+}
+
 html, body{
   overflow-x: hidden; 
 }
