--- a/src/pages/Home/componentesHome/BottomHome/bottomhome.css
+++ b/src/pages/Home/componentesHome/BottomHome/bottomhome.css
@@ -15,6 +15,9 @@
 .left_bottom{
     width: 50%;
 }
+.left_bottom p{
+    
+}
 .hero_bottom span{
     color: var(--color-gray-800);
     font-weight: 500;
