--- a/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
+++ b/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
@@ -10,6 +10,14 @@
     display: flex;
     flex-direction: column;
 }
+.cases-scroll h1 {
+    font-size: 96px;
+    font-weight: 500;
+    line-height: 115.2px;
+    vertical-align: middle;
+    font-family: "neue-haas-grotesk-display"
+
+}
 
 .middle-text {
     position: absolute;
@@ -28,13 +36,7 @@
     transform: rotate(90deg);
 }
 
-.cases-scroll h1 {
-    font-size: 96px;
-    font-weight: 500;
-    line-height: 115.2px;
-    vertical-align: middle;
 
-}
 
 .case-1 {
     width: 100%;
@@ -42,6 +44,7 @@
     position: relative;
     margin-bottom: 1em;
 }
+
 .case-1 img {
     width: 20.6875rem;
     height: 16.25rem;
@@ -53,7 +56,13 @@
     color: var(--color-gray-700);
     display: flex;
     justify-content: space-between;
-    font-size: 14px;
+}
+.project p{
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 130%;
+    font-family: "neue-haas-grotesk-text";
+
 }
 .project-name :nth-child(1){
     color: var(--color-gray-100);
