--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -4,17 +4,20 @@
     padding-top: 4.375rem;
 }
 .about-us h1{
+    font-family: "neue-haas-grotesk-display";
     font-size: 88px;
     font-weight: 500;
     line-height: 105.6px;
 }
 .about-us h2{
+    font-family: "neue-haas-grotesk-text";
     font-size: 22px;
     font-weight: 400;
-    line-height: 26.4px;
+    line-height: 120%;
     color: var(--color-gray-400);
 }
 .about-us span{
+    font-family: "neue-haas-grotesk-text";
     color: var(--color-gray-100);
  
 }
