--- a/src/pages/About/componentesAbout/Fundadores/fundadores.css
+++ b/src/pages/About/componentesAbout/Fundadores/fundadores.css
@@ -14,6 +14,7 @@
 }
 
 .fund-name h2{
+    font-family: "neue-haas-grotesk-display";
    color: var(--color-black);
    font-size: 48px;
    font-weight: 450;
@@ -23,7 +24,6 @@
 .fund-name p{
     color: var(--color-gray-500);
     font-weight: 500;
-    font-size: 16px;
     line-height: 130%;
 
 }
@@ -31,7 +31,7 @@
     padding-bottom: 1.25rem;
 }
 .fund-img{
-    padding-top: 9.375rem;
+    padding-top: 170px;
     padding-bottom: 1.5625rem;
     width: 100%;
     max-width: 93.75rem;
@@ -60,6 +60,11 @@
 }
 .description{
     text-align: end;
+}
+.description p span{
+    font-family: "neue-haas-grotesk-text";
+    font-weight: 400;
+    line-height: 120%;
 }
 
 .fund-img img{
