--- a/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
+++ b/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
@@ -14,11 +14,14 @@
 .left-roulette{
     display: flex;
     align-items: center;
+    
 }
 .left-roulette h2{
+    font-family: "neue-haas-grotesk-display";
     font-size: 24px;
     font-weight: 450;
     line-height: 120%;
+    letter-spacing: -0.48px;
 }
 /* parte direita  */
 .rigth-roulette{
@@ -28,6 +31,7 @@
 }
 
 .rigth-roulette p{
+    font-family: "neue-haas-grotesk-text";
     font-size: 16px;
     font-weight: 400;
     line-height: 120%;
@@ -68,7 +72,6 @@
 
 
 .middle-roulette .country h1{
-    font-family: 'NeueHaasDisplayRoman';
     font-size: 88px;
     font-weight: 500;
     line-height: 100%;
