transformando services em componente reutilizavel - white

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 :root{
   --color-gray-500: #808080;
   --color-gray-900: #E6E6E6;
+  --color-gray-1000: #4C4C4C;
   --color-gray-600: #666666;
   --color-gray-200: #333333;
   --color-gray-100: #191919;
