--- a/src/componentes/Ideias/ideias.css
+++ b/src/componentes/Ideias/ideias.css
@@ -1,9 +1,16 @@
 /* div principal */
 .container_ideias{
-    background-color: var(--color-black);
     color: var(--color-white);
     padding-top: 14.5rem;
 }
+
+.white-ideias{
+    background-color: white;
+}
+.black-ideias{
+    background-color: var(--color-black);
+}
+
 
 /* cada divisao das secoes */
 .sections {
@@ -15,6 +22,9 @@
     padding-top: 32px;
     border-top: 1px var(--color-gray-100) solid;
     
+}
+.sections.white-ideias {
+    border-top: 1px var(--color-gray-900) solid;
     
 }
 .sections p{
@@ -24,13 +34,19 @@
     color: var(--color-gray-200);
     transition: color 0.5s ease;
 
-
+}
+.sections.white-ideias p{
+    color: var(--color-gray-800);
 }
 .sections a{
     color: var(--color-gray-200);
     transition: color 0.5s ease;
-
-
+    font-size: 20px;
+    font-weight: 500;
+}
+.sections.white-ideias a{
+    color: var(--color-gray-800);
+    transition: color 0.5s ease;
 }
 
 
@@ -38,9 +54,18 @@
 .sections.active p{
     color: var(--color-gray-700); 
 }
+
+.sections.white-ideias.active p{
+    color: var( --color-gray-1000); 
+}
+
 .sections.active .options a{
     color: var(--color-white);
 }
+.sections.white-ideias.active .options a{
+    color: var(--color-black);
+}
+
 
 
 
@@ -72,4 +97,9 @@
     border-bottom: 1px var(--color-gray-100) solid;
 
 }
+.sections_last.white-ideias{
+    border-bottom: 1px var(--color-gray-900) solid;
+
+}
+
 
