--- a/src/pages/About/componentesAbout/ProjectsFeedBack/projectsfeedback.css
+++ b/src/pages/About/componentesAbout/ProjectsFeedBack/projectsfeedback.css
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 50% 50%;
     margin-top: 15.4375rem;
+    
 
 }
 .project-feedback .img-project {
@@ -17,6 +18,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    position: relative;
 }
 .feedback .descri{
     width: 100%;
@@ -59,6 +61,22 @@
 }
 .people-description .people-name span{
     color: var( --color-gray-500);
+}
+
+.change-slide{
+    width: 100%;
+    height: 10.75rem;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+.change-slide .bar{
+    width: 14.75rem;
+}
+.change-slide .setas{
+    margin-right: 8rem;
+    display: flex;
+    gap: 2rem;
 }
 
 
