--- a/src/pages/About/componentesAbout/ProjectsFeedBack/projectsfeedback.css
+++ b/src/pages/About/componentesAbout/ProjectsFeedBack/projectsfeedback.css
@@ -1,6 +1,6 @@
 .project-feedback{
     width: 100%;
-    height: 800px;
+    height: 39.875rem;
     display: grid;
     grid-template-columns: 50% 50%;
     margin-top: 15.4375rem;
