--- a/src/componentes/InfinitTimeLine/infinit.css
+++ b/src/componentes/InfinitTimeLine/infinit.css
@@ -3,41 +3,86 @@
     width: 100%;
     height: 200px;
     overflow: hidden;
-}
-.top-timeline{
-    display: flex;
-    width: 100%;
-    gap: 18px;
-    justify-content: center;
-    white-space: nowrap;
-    will-change: transform;
-    animation: marquee 30s linear infinite;
-}
-.top-timeline img{
-    width: 100%;
-    max-width: 13.25rem;
-    height: 5.125rem;
-    
-}
-.bot-timeline{
-    margin-top: 27px;
-    animation: marquee-reverse 30s linear infinite;
+    position: relative;
 }
 
-@keyframes marquee {
-    from {
-      transform: translateX(0);
-    }
-    to {
-      transform: translateX(-50%);
-    }
-  }
+.timeline{
+  width: 100%;
+  max-width: 100%;
+  height: 100px;
+  margin-inline: auto;
+  position: relative;
+  overflow: hidden;
+}
 
-  @keyframes marquee-reverse {
-    from {
-      transform: translateX(0);
-    }
-    to {
-      transform: translateX(50%);
-    }
+@keyframes scrollLeft {
+  to {
+    left: -212px;
   }
+}
+
+@keyframes scrollRight {
+  to {
+    right: -212px;
+  }
+}
+.itemLeft,
+.itemRight{ 
+  width: 13.25rem;
+  height: 5.125rem;
+  border-radius: 10px;
+  position: absolute;
+  animation-duration: 40s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+.itemLeft{
+  animation-name: scrollLeft;
+  left: max(calc(212px * 10), 100%);
+}
+.itemRight{
+  animation-name: scrollRight;
+  right: max(calc(212px * 10), 100%);
+}
+
+.item1{
+  animation-delay: calc(40s / 10 * (10 - 1) * -1);
+
+}
+.item2{
+  animation-delay: calc(40s / 10 * (10 - 2) * -1);
+
+}
+.item3{
+  animation-delay: calc(40s / 10 * (10 - 3) * -1);
+
+}
+.item4{
+  animation-delay: calc(40s / 10 * (10 - 4) * -1);
+
+}
+.item5{
+  animation-delay:calc(40s / 10 * (10 - 5) * -1) ;
+
+}
+.item6{
+  animation-delay:calc(40s / 10 * (10 - 6) * -1) ;
+
+}
+.item7{
+  animation-delay:calc(40s / 10 * (10 - 7) * -1) ;
+
+}
+.item8{
+  animation-delay:calc(40s / 10 * (10 - 8) * -1) ;
+
+}
+.item9{
+  animation-delay:calc(40s / 10 * (10 - 9) * -1) ;
+
+}
+.item10{
+  animation-delay:calc(40s / 10 * (10 - 10) * -1) ;
+
+}
