--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@
   --color-gray-700: #B3B3B3;
   --color-gray-800: #CCCCCC;
   --color-gray-400: #999999;
+  --color-gray-50: #F7F7F7;
   --color-white: #FFFFFF;
   --color-black: #000000
 }
