--- a/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
+++ b/src/pages/About/componentesAbout/RoletaScroll/roletaScroll.css
@@ -38,7 +38,7 @@
 }
 
  /* container blour */
-.container-blour{
+.container-blur{
     width: 100%;
     height: 328px;
     position: absolute;
@@ -48,7 +48,7 @@
     
 }
 
-.container-blour.bottom{
+.container-blur.bottom{
     top: auto; 
     bottom: 0;
 }
