--- a/src/componentes/NavBar/navbar.css
+++ b/src/componentes/NavBar/navbar.css
@@ -1,9 +1,11 @@
 :root {
-    --navbar-color: var(--color-gray-900); /* Cor padrão */
-  }
+    --navbar-color: var(--color-gray-900);
+    /* Cor padrão */
+}
+
 /* Nav Bar branca */
-.navbar{
-    z-index: 10;
+.navbar {
+    z-index: 5;
     position: relative;
     display: flex;
     justify-content: space-between;
@@ -12,35 +14,208 @@
     height: 46px;
     align-items: center;
     color: var(--navbar-color);
-    
+
 }
 
 /* Muda a cor da navbar */
 
-.white{
+.white {
     --navbar-color: var(--color-gray-900)
-
 }
-.black{
+
+.black {
     --navbar-color: var(--color-gray-100)
-
 }
 
-.navbar p{
+.navbar p {
     font-size: 14px;
     font-weight: 500;
     line-height: 100%;
     gap: 32px;
-   
+
 }
-.navbar .logo a{
+
+.navbar .logo a {
     display: flex;
     align-items: center;
 }
 
-.navbar .logo img{
+.navbar .logo img {
     width: 100%;
     max-width: 22px;
     height: 22px;
 }
 
+.menu-overlay {
+    color: var(--color-white);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: var(--color-black);
+    z-index: 10;
+    display: flex;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 0%, 0% 0%);
+}
+
+.branding {
+    margin-top: 55px;
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+}
+
+.branding h2 {
+    font-family: "neue-haas-grotesk-display";
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 100%;
+}
+
+.branding .p1 {
+    text-align: end;
+
+}
+
+.links-container {
+    width: 100%;
+    height: 386px;
+    margin-top: 63px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.links-container .links-img {
+    width: 40%;
+    height: 386px;
+}
+
+.links-container .links-img img {
+    width: 579px;
+    height: 386px;
+    object-position: 50% 25%;
+
+}
+
+.links-container .links {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.links-container .links .link {
+    display: flex;
+    align-items: center;
+    gap: 22px;
+}
+
+.link p {
+    font-family: "neue-haas-grotesk-text";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 100%;
+    color: var(--color-gray-600);
+
+}
+
+.link h1 {
+    font-family: "neue-haas-grotesk-display";
+    font-size: 88px;
+    font-weight: 500;
+    line-height: 100%;
+    color: var(--color-gray-600);
+
+}
+
+.footer-menu {
+    width: 100%;
+    max-width: 1850px;
+    height: 100px;
+    align-items: end;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 180px;
+
+
+
+}
+
+.footer-menu .social-mn {
+    width: 100%;
+    max-width: 7.375rem;
+    color: var(--color-gray-500);
+}
+
+.social-mn .top_part p {
+    margin-bottom: 28px;
+    font-weight: 500;
+}
+
+.social-mn .bottom_part {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+
+}
+
+
+.social-mn .bottom_part p {
+    color: var(--color-gray-900);
+    font-size: 16px;
+    line-height: 100%;
+    font-weight: 500;
+    margin-bottom: 0px;
+}
+
+.social-mn .bottom_part p:first-child {
+    margin-bottom: 10px;
+
+}
+
+.footer-menu .right_part {
+    width: 100%;
+    max-width: 193px;
+    color: var(--color-gray-500);
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+.footer-menu h3 {
+    font-family: "neue-haas-grotesk-display";
+    color: var(--color-gray-900);
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 100%;
+
+
+}
+
+
+.footer-menu .right_part a {
+    color: var(--color-gray-900);
+    margin-left: 5px;
+}
+
+.right_part .time_text {
+    margin-bottom: 28px;
+    font-weight: 500;
+
+}
+
+.right_part .time {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+.right_part .time p {
+    font-weight: 450;
+
+}
