--- a/src/componentes/NavBar/navbar.css
+++ b/src/componentes/NavBar/navbar.css
@@ -16,6 +16,9 @@
     color: var(--navbar-color);
 
 }
+.nav-menu{
+    cursor: pointer;
+}
 
 /* Muda a cor da navbar */
 
@@ -106,6 +109,7 @@
     width: 60%;
     display: flex;
     flex-direction: column;
+    padding-top: 0;
 
 }
 
@@ -114,6 +118,9 @@
     align-items: center;
     gap: 22px;
 }
+.link{
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+}
 
 .link p {
     font-family: "neue-haas-grotesk-text";
@@ -121,6 +128,7 @@
     font-weight: 400;
     line-height: 100%;
     color: var(--color-gray-600);
+    
 
 }
 
