--- a/src/componentes/NavBar/navbar.css
+++ b/src/componentes/NavBar/navbar.css
@@ -105,39 +105,43 @@
 
 }
 
-.links-container .links {
+.links-container .links-menu {
     width: 60%;
     display: flex;
     flex-direction: column;
     padding-top: 0;
+ 
 
 }
 
-.links-container .links .link {
+.links-menu .link-menu {
     display: flex;
     align-items: center;
     gap: 22px;
+    transition: color 0.5s ease; 
+    color: var(--color-gray-600); 
 }
-.link{
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+.links-menu .link-menu:hover{
+    color: white;
+
+}
+.link-menu{
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 }
 
-.link p {
+.link-menu p {
     font-family: "neue-haas-grotesk-text";
     font-size: 14px;
     font-weight: 400;
     line-height: 100%;
-    color: var(--color-gray-600);
-    
 
 }
 
-.link h1 {
+.link-menu h1 {
     font-family: "neue-haas-grotesk-display";
     font-size: 88px;
     font-weight: 500;
     line-height: 100%;
-    color: var(--color-gray-600);
 
 }
 
