--- a/src/pages/Home/componentesHome/AboutHome/abouthome.css
+++ b/src/pages/Home/componentesHome/AboutHome/abouthome.css
@@ -75,6 +75,16 @@
     
 
 }
+@media(max-width: 1280px) {
+    .container_about h1{
+        font-size: 50px;
+
+    }
+    .about_text p{
+        font-size: 20px;
+    }
+
+}
 
 @media(max-width: 1200px) {
 
