--- a/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
+++ b/src/pages/Home/componentesHome/ScrollCases/scrollcases.css
@@ -111,6 +111,12 @@
     
 
 }
+@media(max-width: 1280px) {
+    .overlay-blur{
+        height: 11rem;
+    }
+
+}
 
 @media(max-width: 1200px) {
 
