--- a/src/componentes/Services/services.css
+++ b/src/componentes/Services/services.css
@@ -70,3 +70,30 @@
     letter-spacing: -0.48px;
  
 }
+
+/* responsivo medias */
+
+@media(max-width: 1400px) {}
+@media(max-width: 1280px) {}
+
+@media(max-width: 1200px) {}
+
+@media(max-width: 991px) {
+    .images_services .lista_images h1{
+        font-size: 80px;
+    }
+    .lista_images.active .images{
+        max-width: 16rem;
+        height: 10rem;
+    }
+    .text_solutions p{
+        font-size: 18px;
+    }
+
+}
+
+@media(max-width: 768px) {}
+
+@media(max-width: 600px) {}
+
+@media(max-width: 480px) {}
