--- a/src/pages/Home/componentesHome/AboutHome/abouthome.css
+++ b/src/pages/Home/componentesHome/AboutHome/abouthome.css
@@ -94,7 +94,20 @@
 
 }
 
-@media(max-width: 991px) {}
+@media(max-width: 991px) {
+    .about_home{
+        padding-top: 100px;
+    }
+    .container_about h1{
+        font-size: 20px;
+        line-height: 40px;
+    }
+    .about_text p{
+        font-size: 20px;
+        line-height: 25px;
+    }
+
+}
 
 @media(max-width: 768px) {}
 
