--- a/src/pages/Home/componentesHome/AboutHome/abouthome.css
+++ b/src/pages/Home/componentesHome/AboutHome/abouthome.css
@@ -98,6 +98,9 @@
     .about_home{
         padding-top: 100px;
     }
+    .container_about{
+        margin-top: 130px;
+    }
     .container_about h1{
         font-size: 20px;
         line-height: 40px;
