--- a/src/componentes/Solucoes/solucoes.css
+++ b/src/componentes/Solucoes/solucoes.css
@@ -51,7 +51,7 @@
     width: 100%;
     max-width: 542px;
     padding-top: 42px;
-    border-bottom: 1px var(--color-gray-900) solid;
+    /* border-bottom: 1px var(--color-gray-900) solid; */
 
 }
 
@@ -61,6 +61,21 @@
     display: flex;
     flex-direction: column;
     align-items: end;
+
+}
+
+.border-solucoes-top{
+    border-top: 1px var(--color-gray-900) solid;
+    width: 40%;
+    position: absolute;
+    right: 0;
+}
+.border-solucoes-bottom{
+    border-bottom: 1px var(--color-gray-900) solid;
+    width: 40%;
+    position: absolute;
+    left: 0;
+
 }
 
 .herosecond h1 {
@@ -90,7 +105,7 @@
     max-width: 650px;
     display: flex;
     justify-content: space-between;
-    border-top: 1px var(--color-gray-900) solid;
+    /* border-top: 1px var(--color-gray-900) solid; */
 }
 
 .texts_studio h2 {
@@ -210,6 +225,15 @@
 @media(max-width: 768px) {}
 
 @media(max-width: 600px) {
+    .herosecond{
+        padding-top: 20px;
+    }
+    .herofirst h1{
+        font-size: 30px;
+    }
+    .herosecond h1{
+        font-size: 30px;
+    }
     .texts_studio{
         padding-right: 1.25rem;
     }
